feat: add image and resource